auto-test/tests/chapter_18/invalid_types/extra_credit/incompatible_union_types/assign_scalar_to_union.c


union u {int a; int b;};

int main(void) {
    union u x = {1};
    x = 2; 
    return 0;
}